Opened 4 years ago

Closed 3 years ago

#17091 closed bug (fixed)

deadbeef in notify_select_event_pool while using serial port with avrdude

Reported by: pulkomandy Owned by: pulkomandy
Priority: normal Milestone: R1/beta4
Component: System/Kernel Version: R1/beta2
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

I'm using avrdude to program an Atmel microcontroller. It uses an USB serial port.

The chip is succesfully programmed but then I get a crash. This is reproductible. I looked at the tty using the appropriate KDL command and it appears to be fine.

Attachments (6)

_20210717_172016.JPG (2.9 MB ) - added by pulkomandy 4 years ago.
DSC_2025.JPG (4.7 MB ) - added by pulkomandy 4 years ago.
avrdude.trace.txt (155.7 KB ) - added by pulkomandy 4 years ago.
strace of avrdude (during a run without crash)
_20211017_222223.JPG (2.4 MB ) - added by pulkomandy 4 years ago.
Backtrace and dump of tty_cookie
_20211017_222305.JPG (783.2 KB ) - added by pulkomandy 4 years ago.
Dump of first tty
_20211017_222338.JPG (1.2 MB ) - added by pulkomandy 4 years ago.
Dump of second tty

Change History (12)

by pulkomandy, 4 years ago

Attachment: _20210717_172016.JPG added

by pulkomandy, 4 years ago

Attachment: DSC_2025.JPG added

comment:1 by pulkomandy, 4 years ago

It happens everytime with usb_serial, and a bit less often with pc_serial.

Last edited 4 years ago by pulkomandy (previous) (diff)

by pulkomandy, 4 years ago

Attachment: avrdude.trace.txt added

strace of avrdude (during a run without crash)

comment:2 by pulkomandy, 4 years ago

I am looking closer at the code and noticed that the tty KDL command does not work as I thought. You can ignore the info in DSC_2025.JPG​ which is not about the TTYs involved in the crash.

by pulkomandy, 4 years ago

Attachment: _20211017_222223.JPG added

Backtrace and dump of tty_cookie

by pulkomandy, 4 years ago

Attachment: _20211017_222305.JPG added

Dump of first tty

by pulkomandy, 4 years ago

Attachment: _20211017_222338.JPG added

Dump of second tty

comment:3 by pulkomandy, 4 years ago

Added a new capture showing the backtrace and the TTYsfound in the cookie. What's strange is the address passed to tty_notify_if_available and printed in the backtrace does not look valid. What could be happening here? It should be one of the two TTYs found in the cookie?

comment:5 by pulkomandy, 4 years ago

Owner: changed from nobody to pulkomandy
Status: newin-progress

comment:6 by waddlesplash, 3 years ago

Milestone: R1R1/beta4
Resolution: fixed
Status: in-progressclosed

Fix merged in hrev55558

Note: See TracTickets for help on using tickets.